--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 /* Reset CSS */
 * {
   margin: 0;
@@ -64,8 +62,8 @@ header {
 
 /* Saat aktif atau di-scroll ke bagian terkait */
 .nav-link.active {
-  color: #007bff !important; /* Hanya ubah warna teks */
-  background-color: transparent !important; /* Hilangkan background */
+  color: #007bff !important;
+  background-color: transparent !important;
 }
 
 /* Saat belum di-scroll, tetap warna hitam */
@@ -81,6 +79,7 @@ header {
 .carousel-item img {
   height: 100vh;
   object-fit: cover;
+  opacity: 0.9;
 }
 
 .carousel-caption {
@@ -89,7 +88,7 @@ header {
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  background: rgba(0, 0, 0, 0.6);
+  /* background: rgba(0, 0, 0, 0.6); */
   padding: 20px;
   border-radius: 10px;
 }
@@ -133,7 +132,7 @@ header {
 }
 
 .btn {
-  background: #ff6600;
+  background: black;
   color: white;
   padding: 15px 30px;
   text-decoration: none;
@@ -257,7 +256,7 @@ footer {
 
 /* Styling teks di carousel */
 .carousel-caption {
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.5); */
   padding: 20px;
   border-radius: 10px;
 }
